--- a/index.html
+++ b/index.html
@@ -20,15 +20,40 @@
 </head>
 
 <body>
-    <header></header>
-    <main>
+    <a href="#main" class="visually-hidden">Skip to main content</a>
+    <header class="topnav">
+        <h2 class="visually-hidden">Header</h2>
+        <div class="wrapper topnav__wrapper">
+            <a href="/" class="topnav__homelink">
+                <img src="/img/logo-mythos.svg" alt="Mythos homepage" class="topnav__logo" width="128" height="36">
+            </a>
+            <nav>
+                <ul class="topnav__links">
+                    <li class="topnav__item">
+                        <a href="" class="topnav__link">Features</a>
+                    </li>
+                    <li class="topnav__item">
+                        <a href="" class="topnav__link">Pricing</a>
+                    </li>
+                    <li class="topnav__item">
+                        <a href="" class="topnav__link">About</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main id="main">
         <article>
             <section class="wrapper">
                 <h1>Find that elusive unicorn.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, delectus, nesciunt ut nostrum
-                    repellendus amet magni consequuntur numquam aspernatur, eveniet ratione. Amet impedit perspiciatis
-                    soluta libero eos quae, ipsum consequuntur repudiandae quam! Incidunt, unde nam. Molestias eligendi
-                    repudiandae voluptatem, excepturi voluptate, repellendus iusto autem laudantium maxime, velit
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span>, delectus, nesciunt ut nostrum
+                        repellendus amet magni consequuntur numquam aspernatur, eveniet ratione.</span><span>Amet
+                        impedit
+                        perspiciatis
+                        soluta libero eos quae, ipsum consequuntur repudiandae quam! Incidunt, unde nam. Molestias
+                        eligendi</span>
+                    repudiandae voluptatem, excepturi voluptate, repellendus iusto autem laudantium maxime,
+                    velit
                     perspiciatis officia quia.</p>
             </section>
             <section class="wrapper">
