--- a/index.html
+++ b/index.html
@@ -44,32 +44,20 @@
     </header>
     <main id="main">
         <article>
-            <section class="wrapper">
-                <h1>Find that elusive unicorn.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span>, delectus, nesciunt ut nostrum
-                        repellendus amet magni consequuntur numquam aspernatur, eveniet ratione.</span><span>Amet
-                        impedit
-                        perspiciatis
-                        soluta libero eos quae, ipsum consequuntur repudiandae quam! Incidunt, unde nam. Molestias
-                        eligendi</span>
-                    repudiandae voluptatem, excepturi voluptate, repellendus iusto autem laudantium maxime,
-                    velit
-                    perspiciatis officia quia.</p>
+            <section class="hero">
+                <div class="wrapper hero__wrapper">
+                    <img src="/img/unicorn.svg" alt="Unicorn with Stars" class="hero__image" width="483" height="486">
+                    <div class="hero__text">
+                        <h1 class="hero__title">Find that elusive unicorn.</h1>
+                        <p class="hero__content large">Mythos will enable you to discover the newest startups to invest
+                            in.
+                            Powered by AI, used by millions of humans.</p>
+                        <a href="http://" class="hero__button button primary">Free Trial</a>
+                        <a href="http://" class="hero__button button secondary">Pricing</a>
+                    </div>
+                </div>
             </section>
-            <section class="wrapper">
-                <h2>Angel investment matching in real time.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, delectus, nesciunt ut nostrum
-                    repellendus amet magni consequuntur numquam aspernatur, eveniet ratione. Amet impedit perspiciatis
-                    soluta libero eos quae, ipsum consequuntur repudiandae quam! Incidunt, unde nam. Molestias eligendi
-                    repudiandae voluptatem, excepturi voluptate, repellendus iusto autem laudantium maxime, velit
-                    perspiciatis officia quia.</p>
-                <h3>Angel investment matching in real time.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, delectus, nesciunt ut nostrum
-                    repellendus amet magni consequuntur numquam aspernatur, eveniet ratione. Amet impedit perspiciatis
-                    soluta libero eos quae, ipsum consequuntur repudiandae quam! Incidunt, unde nam. Molestias eligendi
-                    repudiandae voluptatem, excepturi voluptate, repellendus iusto autem laudantium maxime, velit
-                    perspiciatis officia quia.</p>
-            </section>
+
         </article>
     </main>
     <footer></footer>
