3 collum layout features section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,36 @@
                 </div>
             </section>
 
+            <section class="features">
+                <h2 class="h2 visually-hidden">Features</h2>
+                <div class="wrapper features__wrapper">
+                    <div class="features__item">
+                        <img src="/img/icon-asterisk.svg" alt="" width="43" height="48" class="features__icon">
+                        <h3 class="h3 features__title">AI-powered matching</h3>
+                        <p class="p features__description">Phasellus ac mi magna. Sed scelerisque, turpis vitae
+                            consequat vehicula, sem turpis pretium tellus, tempor posuere turpis est ac velit.</p>
+                    </div>
+
+
+                    <div class="features__item">
+                        <img src="/img/icon-bell.svg" alt="" width="41" height="48" class="features__icon">
+                        <h3 class="h3 features__title">Immediate notifications</h3>
+                        <p class="p features__description">Mauris id vestibulum metus, ut pretium lacus. Phasellus ac mi
+                            magna. Sed scelerisque, turpis vitae consequat vehicula, sem turpis pretium tellus, tempor
+                            posuere turpis est ac velit.</p>
+                    </div>
+
+
+
+                    <div class="features__item">
+                        <img src="/img/icon-payments.svg" alt="" width="60.57" height="48" class="features__icon">
+                        <h3 class="h3 features__title">Protected payments</h3>
+                        <p class="p features__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Mauris id vestibulum metus, ut pretium lacus.</p>
+                    </div>
+                </div>
+            </section>
+
         </article>
     </main>
     <footer></footer>
