--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
                             consequat vehicula, sem turpis pretium tellus, tempor posuere turpis est ac velit.</p>
                     </div>
 
-
                     <div class="features__item">
                         <img src="/img/icon-bell.svg" alt="" width="41" height="48" class="features__icon">
                         <h3 class="h3 features__title">Immediate notifications</h3>
@@ -76,8 +75,6 @@
                             magna. Sed scelerisque, turpis vitae consequat vehicula, sem turpis pretium tellus, tempor
                             posuere turpis est ac velit.</p>
                     </div>
-
-
 
                     <div class="features__item">
                         <img src="/img/icon-payments.svg" alt="" width="60.57" height="48" class="features__icon">
@@ -87,6 +84,22 @@
                     </div>
                 </div>
             </section>
+
+            <section class="fw-feature">
+                <h2 class="h2 visually-hidden">Feature</h2>
+                <div class="wrapper fw-feature__wrapper">
+
+                    <h2 class="fw-feature__title">Angel investment matching in real time.</h2>
+                    <p class="fw-feature__description medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Mauris id vestibulum
+                        metus, ut pretium lacus. Phasellus ac mi magna. Sed scelerisque, turpis vitae.</p>
+                    <img src="/img/laptop-dashboard.svg" width="792" height="465"
+                        alt="open Laptop showing a dashboard on a screen" class="fw-feature__image">
+
+                </div>
+            </section>
+
+
 
         </article>
     </main>
