--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
             </section>
 
             <section class="fw-feature">
-                <h2 class="h2 visually-hidden">Feature</h2>
                 <div class="wrapper fw-feature__wrapper">
 
                     <h2 class="fw-feature__title">Angel investment matching in real time.</h2>
@@ -99,7 +98,34 @@
                 </div>
             </section>
 
+            <section class="testimonial">
+                <h2 class="visually-hidden">Testimonial</h2>
+                <div class="wrapper testimonial__wrapper">
+                    <figure>
 
+                        <img src="/img/quotation-mark-teal.svg" alt="" width="78" height="66" class="testimonial__icon">
+                        <blockquote>
+                            <p class="testimonial__quote">
+                                When I first started Evermindly, it was a bootstrapped business. However, we were
+                                quickly running out of money. Thanks to Mythos, we were matched with investors for
+                                our
+                                seed funding and have now secured a Series A round!
+                            </p>
+                        </blockquote>
+                        <div class="testimonial__author-wrapper">
+                            <img src="/img/author-1x.jpg" alt="Janice Hsu
+                                            Founder and CEO, Evermindly"
+                                srcset="/img/author-2x.jpg 2x, /img/author-3x.jpg 3x" class="testimonial__author">
+
+                            <figcaption class="testimonial__author-caption">
+                                <p class="medium testimonial__author-description">Janice Hsu<br />
+                                    Founder and CEO, Evermindly</p>
+                            </figcaption>
+                        </div>
+                    </figure>
+                </div>
+                </div>
+            </section>
 
         </article>
     </main>
