--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
                 </div>
             </section>
 
-            <section class="fw-feature">
+            <section class="fw-feature fullwidth">
                 <div class="wrapper fw-feature__wrapper">
 
                     <h2 class="fw-feature__title">Angel investment matching in real time.</h2>
-                    <p class="fw-feature__description medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    <p class="fw-feature__description fullwidth__description medium">Lorem ipsum dolor sit amet,
+                        consectetur adipiscing elit.
                         Mauris id vestibulum
                         metus, ut pretium lacus. Phasellus ac mi magna. Sed scelerisque, turpis vitae.</p>
                     <img src="/img/laptop-dashboard.svg" width="792" height="465"
@@ -124,6 +125,18 @@
                         </div>
                     </figure>
                 </div>
+                </div>
+            </section>
+
+            <section class="fw-cta fullwidth">
+                <div class="wrapper fw-cta__wrapper">
+
+                    <h2 class="fw-cta__title">Get started with Mythos today</h2>
+                    <p class="fw-cta__description fullwidth__description large">Find the next undiscovered unicorn with
+                        a free 14-day trial.
+                    </p>
+                    <a href="http://" class="fw-cta_button button primary white">Free Trial</a>
+
                 </div>
             </section>
 
