--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </section>
 
         <section class="alt-feature">
-          <div class="wrapper">
+          <div class="alt-feature__wrapper wrapper">
             <div class="alt-feature__row">
               <img
                 src="/img/laptop-check.svg"
@@ -166,15 +166,16 @@
                 height="242"
                 class="alt-feature__image"
               />
-              <div class="alt-feature__text"></div>
-              <h3 class="large">
-                <span>AI-Powered Matching</span>Avoid human error
-              </h3>
-              <p class="medium">
-                Ut sapien lectus, vulputate vitae lacus vel, incidunt sodales
-                ipsum. Proin a sem molestie, pulvinar ante non, laoreet ipsum.
-                Sed nec pretium est. Nunc lectus sem.
-              </p>
+              <div class="alt-feature__text">
+                <h3 class="large">
+                  <span>AI-Powered Matching</span>Avoid human error
+                </h3>
+                <p class="medium">
+                  Ut sapien lectus, vulputate vitae lacus vel, incidunt sodales
+                  ipsum. Proin a sem molestie, pulvinar ante non, laoreet ipsum.
+                  Sed nec pretium est. Nunc lectus sem.
+                </p>
+              </div>
             </div>
             <div class="alt-feature__row">
               <img
@@ -184,16 +185,17 @@
                 height="345"
                 class="alt-feature__image"
               />
-              <div class="alt-feature__text"></div>
-              <h3 class="large">
-                <span>Immediate notifications</span>Never miss an alert again
-              </h3>
-              <p class="medium">
-                Lorem ipsum dolor sit amet,
-                <a href="">consectetur adipiscing</a> elit. Sed purus neque,
-                tempor sit amet fringilla in, aliquam et justo. Aenean ac porta
-                urna. Nullam quis mattis mauris.
-              </p>
+              <div class="alt-feature__text">
+                <h3 class="large">
+                  <span>Immediate notifications</span>Never miss an alert again
+                </h3>
+                <p class="medium">
+                  Lorem ipsum dolor sit amet,
+                  <a href="">consectetur adipiscing</a> elit. Sed purus neque,
+                  tempor sit amet fringilla in, aliquam et justo. Aenean ac
+                  porta urna. Nullam quis mattis mauris.
+                </p>
+              </div>
             </div>
             <div class="alt-feature__row">
               <img
@@ -203,15 +205,16 @@
                 height="345"
                 class="alt-feature__image"
               />
-              <div class="alt-feature__text"></div>
-              <h3 class="large">
-                <span>Protected Payments</span>Send payments from anywhere
-              </h3>
-              <p class="medium">
-                Ut sapien lectus, vulputate vitae lacus vel, tincidunt sodales
-                ipsum. <a href="">Proin a sem mattis</a>, pulvinar ante non,
-                laoreet ipsum. Sed nec pretium est. Nunc lectus sem.
-              </p>
+              <div class="alt-feature__text">
+                <h3 class="large">
+                  <span>Protected Payments</span>Send payments from anywhere
+                </h3>
+                <p class="medium">
+                  Ut sapien lectus, vulputate vitae lacus vel, tincidunt sodales
+                  ipsum. <a href="">Proin a sem mattis</a>, pulvinar ante non,
+                  laoreet ipsum. Sed nec pretium est. Nunc lectus sem.
+                </p>
+              </div>
             </div>
           </div>
         </section>
