coding problem quotation

--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
               <img
                 src="/img/quotation-mark-teal.svg"
                 alt=""
+                class="testimonial__icon"
                 width="78"
                 height="66"
-                class="testimonial__icon"
               />
               <blockquote>
                 <p class="testimonial__quote">
@@ -238,15 +238,20 @@
                   funding and have now secured a Series A round!
                 </p>
               </blockquote>
+              <img
+                src="/img/quotation-mark-teal.svg"
+                alt=""
+                class="testimonial__icon"
+                width="78"
+                height="66"
+              />
               <div class="testimonial__author-wrapper">
                 <img
                   src="/img/author-1x.jpg"
-                  alt="Janice Hsu
-                                            Founder and CEO, Evermindly"
+                  alt="headshot of Janice Hsu"
                   srcset="/img/author-2x.jpg 2x, /img/author-3x.jpg 3x"
                   class="testimonial__author"
                 />
-
                 <figcaption class="testimonial__author-caption">
                   <p class="medium testimonial__author-description">
                     Janice Hsu<br />
