--- a/index.html
+++ b/index.html
@@ -267,11 +267,23 @@
           <div class="wrapper fw-cta__wrapper">
             <h2 class="fw-cta__title">Get started with Mythos today</h2>
             <p class="fw-cta__description fullwidth__description large">
-              Find the next undiscovered unicorn with a free 14-day trial.
+              Contact us to find the next undiscovered unicorn.
             </p>
-            <a href="http://" class="fw-cta_button button primary white"
-              >Free Trial</a
-            >
+            <form class="form fw-cta__form">
+              <label for="txtEmail" class="form__label fw-cta__label"
+                >Email Address</label
+              >
+              <input
+                type="email"
+                name="email"
+                id="txtEmail"
+                placeholder="test@test.com"
+                class="form__text fw-cta__text"
+              />
+              <button type="submit" class="fw-cta__button button primary white">
+                Contact
+              </button>
+            </form>
           </div>
         </section>
       </article>
