--- a/index.html
+++ b/index.html
@@ -36,17 +36,29 @@
           />
         </a>
         <nav>
-          <ul class="topnav__links">
-            <li class="topnav__item">
-              <a href="" class="topnav__link">Features</a>
-            </li>
-            <li class="topnav__item">
-              <a href="" class="topnav__link">Pricing</a>
-            </li>
-            <li class="topnav__item">
-              <a href="" class="topnav__link">About</a>
-            </li>
-          </ul>
+          <button class="topnav__open">
+            <img src="/img/hamburger.svg" alt="" width="30" height="23" />
+          </button>
+
+          <div class="topnav__menu">
+            <button class="topnav__close">
+              <img src="/img/close-button.svg" alt="" width="26" height="26" />
+            </button>
+            <ul class="topnav__links">
+              <li class="topnav__item">
+                <a href="" class="topnav__link">Home</a>
+              </li>
+              <li class="topnav__item">
+                <a href="" class="topnav__link">Features</a>
+              </li>
+              <li class="topnav__item">
+                <a href="" class="topnav__link">Pricing</a>
+              </li>
+              <li class="topnav__item">
+                <a href="" class="topnav__link">About</a>
+              </li>
+            </ul>
+          </div>
         </nav>
       </div>
     </header>
