--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/dist/style.css" />
-    <script defer src="/app/js/bodyScrollLock.min.js"></script>
-    <script defer src="/app/js/script.js"></script>
+
+    <script type="module" src="/main.js"></script>
   </head>
 
   <body>
